--- a/practica4/index.html
+++ b/practica4/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Calculos con JS</title>
+    <title>Practica 4</title>
     <link href="./css/bootstrap.min.css" rel="stylesheet" />
     <link href="./css/main.css" rel="stylesheet" />
 </head>
